Feat: add DEL request
