# api/swagger/swagger.yaml
@@ -4,9 +4,9 @@ info:
   title: Hello World App
 # during dev, should point to your local machine
 host: localhost:8000
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -29,6 +29,30 @@ paths:
           description: Success
           schema:
             type: array
+            items:
+              $ref: "#/definitions/User"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /deluser/{id}:
+    x-swagger-router-controller: user
+    parameters:
+      - name: id
+        in: path
+        description: the id of the user to delete
+        required: true
+        type: string
+    delete:
+      description: Delete a user of the system
+      # used as the method name of the controller
+      operationId: delUser
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/User"
             items:
               $ref: "#/definitions/User"
         # responses may fall through to errors
